# Audacity-MCP

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  install.bat  install.sh  pyproject.toml
audacity_mcp/: audacity_client.py  main.py  tool_registry.py
audacity_mcp/tools/: analysis_tools.py  cleanup_tools.py  edit_tools.py  effects_tools.py  generate_tools.py  label_tools.py  project_tools.py  selection_tools.py  track_tools.py  transcription_tools.py  transport_tools.py
audacity_mcp_shared/: __init__.py  constants.py  pipe_protocol.py
docs/: INSTALLATION.md  TOOLS.md
server/: audacity_client.py  main.py  tool_registry.py
server/tools/: analysis_tools.py  cleanup_tools.py  edit_tools.py  effects_tools.py  generate_tools.py  label_tools.py  project_tools.py  selection_tools.py  track_tools.py  transcription_tools.py  transport_tools.py
shared/: __init__.py  constants.py  error_codes.py  pipe_protocol.py
tests/: conftest.py  test_client.py  test_pipe_protocol.py  test_tools.py  test_transcription.py
