[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audacity-mcp"
version = "0.1.4"
description = "MCP server for AI-driven audio editing in Audacity via mod-script-pipe"
license = "Apache-2.0"
authors = [
    { name = "Daniel Hodgetts" },
]
readme = "README.md"
keywords = ["audacity", "mcp", "audio", "ai", "model-context-protocol", "mastering", "transcription"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Editors",
]
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "faster-whisper>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["audacity_mcp", "audacity_mcp_shared"]

[project.scripts]
audacity-mcp = "audacity_mcp.main:main"
